--- a/config/config.json
+++ b/config/config.json
@@ -1,12 +1,7 @@
 {
-	"NewItems": {
-		"Ammo Pouch": {
-			"Enable": true,
-			"Internal Height": 3,
-			"Internal Width": 3
-		}
-	},
-	"Debug": {
-		"Enable": false
-	}
+    "price": 50000,
+    "trader_loyalty_level": 1,
+    "columns": [
+        {"cellH": 3, "cellV": 3}
+    ]
 }
