Configurable external size + logging framework

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,13 @@
 {
     "price": 50000,
+    "AllowInArmband": true,
     "trader_loyalty_level": 1,
-    "columns": [
-        {"cellH": 3, "cellV": 3}
-    ]
+    "ExternalSize": {
+        "cellH": 1,
+        "cellV": 2
+    },
+    "InternalSize": [{
+        "cellH": 2,
+        "cellV": 3
+    }]
 }
