--- a/config/config.json
+++ b/config/config.json
@@ -1,13 +1,13 @@
 {
-    "price": 350000,
+    "price": 150000,
     "AllowInArmband": false,
-    "trader_loyalty_level": 2,
+    "trader_loyalty_level": 1,
     "ExternalSize": {
         "cellH": 1,
         "cellV": 1
     },
-    "InternalSize": [{
+    "InternalSize": {
         "cellH": 2,
-        "cellV": 2
-    }]
+        "cellV": 3
+    }
 }
